--- a/MyBootApp2/pom.xml
+++ b/MyBootApp2/pom.xml
@@ -4,8 +4,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>jp.te4a.spring.boot.myapp1</groupId>
-  <artifactId>MyBootApp1</artifactId>
+  <groupId>jp.te4a.spring.boot.myapp2</groupId>
+  <artifactId>MyBootApp2</artifactId>
   <version>1.0-SNAPSHOT</version>
 
 <parent>
@@ -15,7 +15,7 @@
 </parent>
 
 
-  <name>MyBootApp1</name>
+  <name>MyBootApp2</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -39,9 +39,16 @@
 
 
   <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+        <plugin>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
+          <configuration>
+            <mainClass>jp.te4a.spring.boot.myapp1.App</mainClass>
+          </configuration>
+        </plugin>
+
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
@@ -85,7 +92,6 @@
       <artifactId>spring-boot-maven-plugin</artifactId>
     </plugin>
       </plugins>
-    </pluginManagement>
   </build>
 
 
