--- a/MyBootApp2/pom.xml
+++ b/MyBootApp2/pom.xml
@@ -8,13 +8,6 @@
   <artifactId>MyBootApp2</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-<parent>
-<groupId>org.springframework.boot</groupId>
-<artifactId>spring-boot-starter-parent</artifactId>
-<version>2.4.0</version>
-</parent>
-
-
   <name>MyBootApp2</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
@@ -24,6 +17,13 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
+  
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>1.5.2.RELEASE</version>
+  </parent>
+
 
   <dependencies>
     <dependency>
@@ -37,18 +37,15 @@
     </dependency>
   </dependencies>
 
-
   <build>
       <plugins>
-        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
           <configuration>
-            <mainClass>jp.te4a.spring.boot.myapp1.App</mainClass>
+            <mainClass>jp.te4a.spring.boot.myapp2.App</mainClass>
           </configuration>
         </plugin>
-
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
@@ -87,12 +84,11 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
-          <plugin>			   
-      <groupId>org.springframework.boot</groupId>	
-      <artifactId>spring-boot-maven-plugin</artifactId>
-    </plugin>
+        <plugin>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+
       </plugins>
   </build>
-
-
 </project>
